--- a/blogPessoal/pom.xml
+++ b/blogPessoal/pom.xml
@@ -42,10 +42,16 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-test</artifactId>
+    		<scope>test</scope>
+    		<exclusions>
+    			<exclusion>
+    				<groupId>org.junit.vintage</groupId>
+    				<artifactId>junit-vintage-engine</artifactId>
+    			</exclusion>
+   		 	</exclusions>
+    	</dependency>
 		<dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -70,6 +76,11 @@
 	<artifactId>jjwt-jackson</artifactId>
 	<version>0.11.5</version>
 </dependency>
+		<dependency>
+			<groupId>com.generation</groupId>
+			<artifactId>EdeTodos</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
