eploy do Projeto Blog Pessoal

--- a/blogPessoal/pom.xml
+++ b/blogPessoal/pom.xml
@@ -80,7 +80,12 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.2.0</version>
-		</dependency>		
+		</dependency>
+		<!-- Dependência do Banco de dados PostgreSQL -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency> 	
 	</dependencies>
 
 	<build>
